# documind-ai

./: LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/tasks/: celery_app.py  document_tasks.py
frontend/: .gitignore  README.md  index.html
frontend/src/components/layout/: Sidebar.jsx  Topbar.jsx
frontend/src/components/ui/: index.jsx
frontend/src/data/: mockData.js
frontend/src/layouts/: AppLayout.jsx
frontend/src/pages/: DashboardPage.jsx  DocumentPage.jsx  LoginPage.jsx  RegisterPage.jsx  WorkspaceDetailPage.jsx
src/: App.jsx  index.css
src/components/chat/: ChatPanel.jsx
src/components/documents/: FileUploader.jsx
src/context/: AuthContext.jsx  ThemeContext.jsx
src/pages/: LandingPage.jsx  NotesPage.jsx  SettingsPage.jsx  WorkspacesPage.jsx
